added attribute type="button" for everyone button

--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
       <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
       <ul class="theme-menu__list fc">
         <li class="theme-menu__item">
-          <button type="button" data-theme="dark" class="theme-menu__button">
+          <button type="button" data-theme="dark" class="theme-menu__button" type="button">
             Темно
           </button>
         </li>
         <li class="theme-menu__item">
-          <button type="button" data-theme="auto" disabled class="theme-menu__button">
+          <button type="button" data-theme="auto" disabled class="theme-menu__button" type="button">
             Авто
           </button>
         </li>
         <li class="theme-menu__item">
-          <button type="button" data-theme="light" class="theme-menu__button">
+          <button type="button" data-theme="light" class="theme-menu__button" type="button">
             Светло
           </button>
         </li>
@@ -91,7 +91,7 @@
                 </svg>
               </button>
 
-              <button class="post__list-item-btn-like card__like-button button">
+              <button class="post__list-item-btn-like card__like-button button" type="button">
                 <span class="button__text"> like </span>
               </button>
             </div>
@@ -146,7 +146,7 @@
                 </svg>
               </button>
 
-              <button class="post__list-item-btn-like card__like-button button">
+              <button class="post__list-item-btn-like card__like-button button" type="button">
                 <span class="button__text"> like </span>
               </button>
             </div>
@@ -198,7 +198,7 @@
                 </svg>
               </button>
 
-              <button class="post__list-item-btn-like card__like-button button">
+              <button class="post__list-item-btn-like card__like-button button" type="button">
                 <span class="button__text"> like </span>
               </button>
             </div>
@@ -247,7 +247,7 @@
                 </svg>
               </button>
 
-              <button class="post__list-item-btn-like card__like-button button">
+              <button class="post__list-item-btn-like card__like-button button" type="button">
                 <span class="button__text"> like </span>
               </button>
             </div>
@@ -299,7 +299,7 @@
                 </svg>
               </button>
 
-              <button class="post__list-item-btn-like card__like-button button">
+              <button class="post__list-item-btn-like card__like-button button" type="button">
                 <span class="button__text"> like </span>
               </button>
             </div>
@@ -348,7 +348,7 @@
                 </svg>
               </button>
 
-              <button class="post__list-item-btn-like card__like-button button">
+              <button class="post__list-item-btn-like card__like-button button" type="button">
                 <span class="button__text"> like </span>
               </button>
             </div>
@@ -401,7 +401,7 @@
                 </svg>
               </button>
 
-              <button class="post__list-item-btn-like card__like-button button">
+              <button class="post__list-item-btn-like card__like-button button" type="button">
                 <span class="button__text"> like </span>
               </button>
             </div>
@@ -455,7 +455,7 @@
                 </svg>
               </button>
 
-              <button class="post__list-item-btn-like card__like-button button">
+              <button class="post__list-item-btn-like card__like-button button" type="button">
                 <span class="button__text"> like </span>
               </button>
             </div>
@@ -467,7 +467,8 @@
 
   <footer class="footer">
     <form class="footer__form fc" method="dialog">
-      <button class="footer-btn-save button" onclick="window['dialog'].showModal()" aria-controls="dialog">
+      <button class="footer-btn-save button" onclick="window['dialog'].showModal()" aria-controls="dialog"
+        type="button">
         <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" fill="none" class="floppy" viewbox="0 0 21 21">
           <use href="./svg/floppy.svg#floppy" />
         </svg>
