remove footer and add .save-btn to .main

--- a/index.html
+++ b/index.html
@@ -463,22 +463,19 @@
         </article>
       </li>
     </ul>
-  </main>
 
-  <footer class="footer">
-    <form class="footer__form fc" method="dialog">
-      <button class="footer-btn-save button" onclick="window['dialog'].showModal()" aria-controls="dialog"
-        type="button">
+    <div class="save fc">
+      <button class="save-btn button" onclick="window['dialog'].showModal()" aria-controls="dialog" type="button">
         <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" fill="none" class="floppy" viewbox="0 0 21 21">
           <use href="./svg/floppy.svg#floppy" />
         </svg>
 
-        <span class="footer-btn-save-text button__text">
+        <span class="save-btn-text button__text">
           сохранить на память
         </span>
       </button>
-    </form>
-  </footer>
+    </div>
+  </main>
 
   <dialog class="dialog" id="dialog">
     <div class="dialog__content fc">
