remove  attribute onclick from the button

--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
     </div>
 
     <form class="dialog__form">
-      <button class="button button-ok" onclick="window['dialog'].close()" type="submit">
+      <button class="button button-ok" type="submit">
         <span class="button__text">ok</span>
       </button>
     </form>
