changed the style of characters in the buttons

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 <body class="page">
   <header class="header fc">
     <div class="header__logo">
-      <a class="header__logo-link">&lt;/html&gt;</a>
-      <h1 class="header__logo-title">закрывающий тег</h1>
+      <a class="header__logo-link">&lt;/Html&gt;</a>
+      <h1 class="header__logo-title">Закрывающий тег</h1>
     </div>
 
     <nav class="theme-menu header__theme-menu">
@@ -92,7 +92,7 @@
               </button>
 
               <button class="post__list-item-btn-like card__like-button button" type="button">
-                <span class="button__text"> like </span>
+                <span class="button__text"> Like </span>
               </button>
             </div>
           </div>
@@ -147,7 +147,7 @@
               </button>
 
               <button class="post__list-item-btn-like card__like-button button" type="button">
-                <span class="button__text"> like </span>
+                <span class="button__text"> Like </span>
               </button>
             </div>
           </div>
@@ -199,7 +199,7 @@
               </button>
 
               <button class="post__list-item-btn-like card__like-button button" type="button">
-                <span class="button__text"> like </span>
+                <span class="button__text"> Like </span>
               </button>
             </div>
           </div>
@@ -248,7 +248,7 @@
               </button>
 
               <button class="post__list-item-btn-like card__like-button button" type="button">
-                <span class="button__text"> like </span>
+                <span class="button__text"> Like </span>
               </button>
             </div>
           </div>
@@ -300,7 +300,7 @@
               </button>
 
               <button class="post__list-item-btn-like card__like-button button" type="button">
-                <span class="button__text"> like </span>
+                <span class="button__text"> Like </span>
               </button>
             </div>
           </div>
@@ -349,7 +349,7 @@
               </button>
 
               <button class="post__list-item-btn-like card__like-button button" type="button">
-                <span class="button__text"> like </span>
+                <span class="button__text"> Like </span>
               </button>
             </div>
           </div>
@@ -402,7 +402,7 @@
               </button>
 
               <button class="post__list-item-btn-like card__like-button button" type="button">
-                <span class="button__text"> like </span>
+                <span class="button__text"> Like </span>
               </button>
             </div>
           </div>
@@ -456,7 +456,7 @@
               </button>
 
               <button class="post__list-item-btn-like card__like-button button" type="button">
-                <span class="button__text"> like </span>
+                <span class="button__text"> Like </span>
               </button>
             </div>
           </div>
@@ -471,7 +471,7 @@
         </svg>
 
         <span class="save-btn-text button__text">
-          сохранить на память
+          Cохранить на память
         </span>
       </button>
     </div>
@@ -494,7 +494,7 @@
 
     <form class="dialog__form">
       <button class="button button-ok" type="submit">
-        <span class="button__text">ok</span>
+        <span class="button__text">Ok</span>
       </button>
     </form>
   </dialog>
