changed styles for color themes

--- a/index.html
+++ b/index.html
@@ -466,7 +466,8 @@
 
     <div class="save fc">
       <button class="save-btn button" onclick="window['dialog'].showModal()" aria-controls="dialog" type="button">
-        <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" fill="none" class="floppy" viewbox="0 0 21 21">
+
+        <svg xmlns="http://www.w3.org/2000/svg" class="floppy" viewbox="0 0 40 40">
           <use href="./svg/floppy.svg#floppy" />
         </svg>
 
@@ -479,7 +480,7 @@
 
   <dialog class="dialog" id="dialog">
     <div class="dialog__content fc">
-      <svg xmlns="http://www.w3.org/2000/svg" fill="none" class="dialog-floppy" viewbox="0 0 21 21">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" class="dialog-floppy" viewbox="0 0 40 40">
         <use href="./svg/floppy.svg#floppy" />
       </svg>
       <span class="dialog__text">вставьте дискету, чтобы продолжить</span>
