--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
     </div>
 
     <form class="dialog__form">
-      <button class="button button-ok" type="submit">
+      <button class="button button-ok" type="button">
         <span class="button__text">Ok</span>
       </button>
     </form>
