remove duplicate attribute type

--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
       <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
       <ul class="theme-menu__list fc">
         <li class="theme-menu__item">
-          <button type="button" data-theme="dark" class="theme-menu__button" type="button">
+          <button type="button" data-theme="dark" class="theme-menu__button">
             Темно
           </button>
         </li>
         <li class="theme-menu__item">
-          <button type="button" data-theme="auto" disabled class="theme-menu__button" type="button">
+          <button type="button" data-theme="auto" disabled class="theme-menu__button">
             Авто
           </button>
         </li>
         <li class="theme-menu__item">
-          <button type="button" data-theme="light" class="theme-menu__button" type="button">
+          <button type="button" data-theme="light" class="theme-menu__button">
             Светло
           </button>
         </li>
