add type="submit" for .button-ok

--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
     </div>
 
     <form class="dialog__form">
-      <button class="button button-ok" type="button">
+      <button class="button button-ok" type="submit">
         <span class="button__text">Ok</span>
       </button>
     </form>
