add type="button" for .post__list-item-bts-icon

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <p>Место для ваших воспоминаний о начале обучения.</p>
 
             <div class="post__list-item-bts">
-              <button class="post__list-item-bts-icon card__icon-button">
+              <button class="post__list-item-bts-icon card__icon-button" type="button">
                 <svg xmlns="http://www.w3.org/2000/svg" width="39" height="36" viewBox="0 0 39 36" fill="none"
                   class="like-icon">
                   <g class="heart" clip-path="url(#clip0_4039_768)">
@@ -121,7 +121,7 @@
             <p>Место для ваших воспоминаний о начале первого спринта.</p>
 
             <div class="post__list-item-bts">
-              <button class="post__list-item-bts-icon card__icon-button">
+              <button class="post__list-item-bts-icon card__icon-button" type="button">
                 <svg xmlns="http://www.w3.org/2000/svg" width="39" height="36" viewBox="0 0 39 36" fill="none"
                   class="like-icon">
                   <g clip-path="url(#clip0_4039_768)">
@@ -173,7 +173,7 @@
             </p>
 
             <div class="post__list-item-bts">
-              <button class="post__list-item-bts-icon card__icon-button">
+              <button class="post__list-item-bts-icon card__icon-button" type="button">
                 <svg xmlns="http://www.w3.org/2000/svg" width="39" height="36" viewBox="0 0 39 36" fill="none"
                   class="like-icon">
                   <g clip-path="url(#clip0_4039_768)">
@@ -222,7 +222,7 @@
             <p>Место для ваших воспоминаний о начале второго спринта.</p>
 
             <div class="post__list-item-bts">
-              <button class="post__list-item-bts-icon card__icon-button">
+              <button class="post__list-item-bts-icon card__icon-button" type="button">
                 <svg xmlns="http://www.w3.org/2000/svg" width="39" height="36" viewBox="0 0 39 36" fill="none"
                   class="like-icon">
                   <g clip-path="url(#clip0_4039_768)">
@@ -274,7 +274,7 @@
             </p>
 
             <div class="post__list-item-bts">
-              <button class="post__list-item-bts-icon card__icon-button">
+              <button class="post__list-item-bts-icon card__icon-button" type="button">
                 <svg xmlns="http://www.w3.org/2000/svg" width="39" height="36" viewBox="0 0 39 36" fill="none"
                   class="like-icon">
                   <g clip-path="url(#clip0_4039_768)">
@@ -323,7 +323,7 @@
             <p>Место для ваших воспоминаний о начале третьего спринта.</p>
 
             <div class="post__list-item-bts">
-              <button class="post__list-item-bts-icon card__icon-button">
+              <button class="post__list-item-bts-icon card__icon-button" type="button">
                 <svg xmlns="http://www.w3.org/2000/svg" width="39" height="36" viewBox="0 0 39 36" fill="none"
                   class="like-icon">
                   <g clip-path="url(#clip0_4039_768)">
@@ -376,7 +376,7 @@
             </p>
 
             <div class="post__list-item-bts">
-              <button class="post__list-item-bts-icon card__icon-button">
+              <button class="post__list-item-bts-icon card__icon-button" type="button">
                 <svg xmlns="http://www.w3.org/2000/svg" width="39" height="36" viewBox="0 0 39 36" fill="none"
                   class="like-icon">
                   <g clip-path="url(#clip0_4039_768)">
@@ -430,7 +430,7 @@
             </p>
 
             <div class="post__list-item-bts">
-              <button class="post__list-item-bts-icon card__icon-button">
+              <button class="post__list-item-bts-icon card__icon-button" type="button">
                 <svg xmlns="http://www.w3.org/2000/svg" width="39" height="36" viewBox="0 0 39 36" fill="none"
                   class="like-icon">
                   <g clip-path="url(#clip0_4039_768)">
