--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <div class="post__list-item-picture">
             <picture>
               <source srcset="./images/2.jpg" media="(max-width: 375px)">
-              <img src="./images/1.jpg" alt="Фритрек и нулевой спринт: Подготовка к работе" class="post__list-item-img">
+              <img src="./images/1.jpg" alt="Фургон под ночным небом со звездами" class="post__list-item-img">
             </picture>
             <p class="post__list-item-label">&lt;/HTML&gt;</p>
           </div>
@@ -104,7 +104,8 @@
           <div class="post__list-item-picture">
             <picture>
               <source srcset="./images/2.jpg" media="(max-width: 375px)">
-              <img src="./images/1.jpg" alt="1 спринт: Я — чистый лист" class="post__list-item-img grayscale">
+              <img src="./images/1.jpg" alt="Фургон под ночным небом со звездами в оттенках серого цвета"
+                class="post__list-item-img grayscale">
             </picture>
             <p class="post__list-item-label">&lt;/HTML&gt;</p>
           </div>
@@ -156,7 +157,8 @@
           <div class="post__list-item-picture">
             <picture>
               <source srcset="./images/2.jpg" media="(max-width: 375px)">
-              <img src="./images/1.jpg" alt="1 спринт: А если не получится?" class="post__list-item-img saturate">
+              <img src="./images/1.jpg" alt="Фургон под ночным небом со звездами в насыщенных цветах"
+                class="post__list-item-img saturate">
             </picture>
             <p class="post__list-item-label">&lt;CSS&gt;</p>
           </div>
@@ -206,7 +208,8 @@
           <div class="post__list-item-picture">
             <picture>
               <source srcset="./images/2.jpg" media="(max-width: 375px)">
-              <img src="./images/1.jpg" alt="2 спринт: Погоня за идеалом" class="post__list-item-img hue-rotate">
+              <img src="./images/1.jpg" alt="Фургон под ночным небом со звездами с измененным цветом"
+                class="post__list-item-img hue-rotate">
             </picture>
             <p class="post__list-item-label">&lt;desigions&gt;</p>
           </div>
@@ -255,7 +258,8 @@
           <div class="post__list-item-picture">
             <picture>
               <source srcset="./images/2.jpg" media="(max-width: 375px)">
-              <img src="./images/1.jpg" alt="2 спринт: О тех, кто рядом" class="post__list-item-img invert">
+              <img src="./images/1.jpg" alt="Фургон под ночным небом со звездами с инвертированным цветом"
+                class="post__list-item-img invert">
             </picture>
             <p class="post__list-item-label">care</p>
           </div>
@@ -309,7 +313,8 @@
           <div class="post__list-item-picture">
             <picture>
               <source srcset="./images/2.jpg" media="(max-width: 375px)">
-              <img src="./images/1.jpg" alt="3 спринт: Обходные стратегии" class="post__list-item-img sepia">
+              <img src="./images/1.jpg" alt="Фургон под ночным небом со звездами в теплых цветовых тонах"
+                class="post__list-item-img sepia">
             </picture>
             <p class="post__list-item-label">&lt;support&gt;</p>
           </div>
@@ -358,7 +363,8 @@
           <div class="post__list-item-picture">
             <picture>
               <source srcset="./images/2.jpg" media="(max-width: 375px)">
-              <img src="./images/1.jpg" alt="3 спринт: Когда опускаются руки" class="post__list-item-img blur">
+              <img src="./images/1.jpg" alt="Фургон под ночным небом со звездами в размытых тонах"
+                class="post__list-item-img blur">
             </picture>
             <p class="post__list-item-label">&lt;lifes-style: none;&gt;</p>
           </div>
@@ -409,7 +415,9 @@
           <div class="post__list-item-picture">
             <picture>
               <source srcset="./images/2.jpg" media="(max-width: 375px)">
-              <img src="./images/1.jpg" alt="«Сейчас я здесь»" class="post__list-item-img multi-filter">
+              <img src="./images/1.jpg"
+                alt="Фургон под ночным небом со звездами с наложением нескольких цветовых фильтров"
+                class="post__list-item-img multi-filter">
             </picture>
             <p class="post__list-item-label">&lt;experience&gt;</p>
           </div>
