--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
       <span class="dialog__text">вставьте дискету, чтобы продолжить</span>
     </div>
 
-    <form class="dialog__form">
+    <form class="dialog__form" method="dialog">
       <button class="button button-ok" type="submit">
         <span class="button__text">Ok</span>
       </button>
